--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <section class="home" id="home">
         <div class="home-content">
             <h3>Hello, It's me</h3>
-            <h1>Nahida Akterr</h1>
+            <h1>Nahida Akter</h1>
             <h3>And I am a <span class="multiple-text"></span></h3>
-            <p>"Seasoned Business Manager at Oracle, adept in strategic planning, business development, and project execution. Proficient in navigating diverse sectors including Defense, Banking, Power, and MNCs. Specialized in Network Infrastructure, Data Centers, Video Surveillance, Payment Gateways. Let's redefine the future of technology together!</p>
+            <p>Seasoned Business Manager at Oracle, adept in strategic planning, business development, and project execution. Proficient in navigating diverse sectors including Defense, Banking, Power, and MNCs. Specialized in Network Infrastructure, Data Centers, Video Surveillance, Payment Gateways. Let's redefine the future of technology together!</p>
 
         <div class="social-media">
             <a href="https://fb.com/cariestatiane789"><i class='bx bxl-facebook-circle' ></i></a>
